--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,6 @@ body{
     background-image: url(assets/fundo-inicio.png);
     background-size: 100%;
     background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
 }
