--- a/src/components/Info/style.css
+++ b/src/components/Info/style.css
@@ -26,14 +26,19 @@
     align-items: center;
     width: 100vw;
     position: absolute;
-    margin-top: 25.0rem;
-   
+    margin-top: 22.0rem;
+    padding: 3.6rem;
+    
 }
 
 @media screen and (max-width: 700px) {
     .skills{
         display: flex;
         flex-direction: column;
+    }
+
+    .skills section p{
+        width: 25.0rem;
     }
 }
 
