--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(assets/fundo-inicio.png);
+    /* background-image: url(assets/fundo-inicio.png); */
     background-size: 100%;
     background-repeat: no-repeat;
     display: flex;
