--- a/src/components/Topo/style.css
+++ b/src/components/Topo/style.css
@@ -60,15 +60,10 @@ strong{
 
 .logoBranca{
     /* position: absolute; */
-    
-    width: 35.0rem;
+    width: 25.0rem;
     margin: 0 auto;
+    margin-top: 5.0rem;
 }
-
-
-
-
-
 
 
 
