--- a/src/components/Video/video.css
+++ b/src/components/Video/video.css
@@ -1,7 +1,8 @@
 .videoApresentacao{
     width: 100vw;
-    height: 60.0rem;
-    background-color: "#006edb";
+    height: 65.0rem;
+    background-color: #006edb;
+    
     margin-top: 10.0rem;
     display: flex;
     flex-direction: column;
@@ -9,8 +10,9 @@
 
 .videoApresentacao h1{
     margin-top: 2.6rem;
-    color: "#006edb";
-    font-size: 4.6rem;
+    /* color: #006edb; */
+    font-size: 3.6rem;
+    margin-bottom: 1.6rem;
 }
 
 .videoAqui{
@@ -29,10 +31,11 @@
     width: 30.0rem;
     height: 5.0rem;
     border-radius: 3.0rem;
-    color: "#006edb";
+    color: #006edb;
     border: none;
-    background-color: "#006edb";
-    font-size: 2.0rem;
+   
+    font-size: 2.4rem;
+    font-family: montserrat black;
 }
 
 .btn:hover{
