--- a/src/components/Topo/style.css
+++ b/src/components/Topo/style.css
@@ -9,7 +9,19 @@
     flex-wrap: wrap;
     color: white;
     width: 85vw;
+    animation: fadeIn 1s ease-in-out forwards;
 }
+
+@keyframes fadeIn {
+    0% {
+      opacity: 0;
+      transform: translateY(-20px); /* Iniciar com uma translação para baixo */
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0); /* Terminar sem translação */
+    }
+  }
 
 .txt section{
     flex-basis: 55.0rem;
@@ -66,6 +78,7 @@ strong{
     width: 25.0rem;
     margin: 0 auto;
     margin-top: 5.0rem;
+    animation: fadeIn 1s ease-in-out forwards;
 }
 
 
