--- a/src/components/Info/style.css
+++ b/src/components/Info/style.css
@@ -1,9 +1,9 @@
 .informacoes{
     width: 100vw;
-    height: 50.0rem;
+    height: 60.0rem;
     /* margin-top: 19.0rem; */
     background-image: url('../../assets/fundo-linhas.png');
-    background-size: 100vw;
+    background-size: cover;
     display: flex;
  
     background-repeat: no-repeat;
