--- a/src/components/Video/video.css
+++ b/src/components/Video/video.css
@@ -3,7 +3,7 @@
     height: 65.0rem;
     background-color: #006edb;
     
-    margin-top: 10.0rem;
+    /* margin-top: 10.0rem; */
     display: flex;
     flex-direction: column;
 }
