--- a/src/components/Video/video.css
+++ b/src/components/Video/video.css
@@ -55,7 +55,8 @@
     border: none;
    
     font-size: 2.4rem;
-    font-family: montserrat black;
+    font-family: montserrat;
+    font-weight: 900;
 }
 
 @media screen and (max-width: 500px){
