--- a/src/components/Info/style.css
+++ b/src/components/Info/style.css
@@ -54,8 +54,8 @@
     display: grid;
     /* grid-template-columns: 1fr 1fr 1fr 1fr 1fr; */
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); 
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-start;
+    align-items: flex-start;
     width: 100vw;
     position: absolute;
     margin-top: 22.0rem;
