--- a/src/components/Info/style.css
+++ b/src/components/Info/style.css
@@ -60,6 +60,7 @@
     position: absolute;
     margin-top: 22.0rem;
     padding: 3.6rem;
+    gap: 0.6rem;
 }
 
 @media screen and (max-width: 700px) {
