--- a/src/components/Video/video.css
+++ b/src/components/Video/video.css
@@ -57,6 +57,8 @@
     font-size: 2.4rem;
     font-family: montserrat;
     font-weight: 900;
+    transition: 0.5s;
+    transform: scale(1);
 }
 
 @media screen and (max-width: 500px){
@@ -68,9 +70,10 @@
 }
 
 .btn:hover{
-    background-color: #004488;
+    background-color: #65c0a3;
     color: white;
     cursor: pointer;
     transition: 0.5s;
     transform: scale(1.05);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.418);
 }
