--- a/src/components/Depoimentos/style.css
+++ b/src/components/Depoimentos/style.css
@@ -25,22 +25,21 @@
     height: 20.0rem;
     background-color: #006edb;
     flex: 1;
-    transition: .3s;
-    background-image: url('../../assets/socorro.png');
+    transition: .4s;
+    background-image: url('../../assets/perfil.png');
     background-repeat: no-repeat;
 }
 .card:hover{
     flex: 3;
     background-color: #0058af;
-    background-image: url('../../assets/socorro-txt.png');
+    background-image: url('../../assets/perfil-texto.png');
 }
 
 
 @media screen and (max-width: 500px) {
     .container{
+        display: flex;
         flex-direction: column;
     }
-    .card{
-        height: 20.0rem;
-    }
+   
 }
